--- a/assets/css/components/text.scss
+++ b/assets/css/components/text.scss
@@ -1,74 +1,15 @@
-code,
-kbd,
-pre,
-samp {
-	font-size: 1em;
+.lead {
+	color: rgba($lead-color, .75);
 }
 
-small,
-.small {
-	font-size: 80%;
-	font-weight: 400;
+@media (max-width: 768px) {
+	.lead {
+		color: rgba($lead-color, .85);
+	}
 }
 
-.blockquote {
-	margin-bottom: 1rem;
-	font-size: 1.25rem;
-}
-
-.blockquote-footer {
-	display: block;
-	font-size: 80%;
-	color: #6c757d;
-}
-
-.blockquote-footer::before {
-	content: '\2014\00A0';
-}
-
-textarea {
-	overflow: auto;
-	resize: vertical;
-}
-
-fieldset {
-	min-width: 0;
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-
-legend {
-	display: block;
-	width: 100%;
-	max-width: 100%;
-	padding: 0;
-	margin-bottom: 0.5rem;
-	font-size: 1.5rem;
-	line-height: inherit;
-	color: inherit;
-	white-space: normal;
-}
-
-output {
-	display: inline-block;
-}
-
-summary {
-	display: list-item;
-	cursor: pointer;
-}
-
-template {
-	display: none;
-}
-
-[hidden] {
-	display: none !important;
-}
-
-mark,
-.mark {
-	padding: 0.2em;
-	background-color: var(--light);
+hr {
+	box-sizing: content-box;
+	height: 0;
+	overflow: visible;
 }
