--- a/assets/css/components/typo.scss
+++ b/assets/css/components/typo.scss
@@ -23,41 +23,6 @@ strong {
 	font-weight: $font-weight-bolder !important;
 }
 
-@media only screen and (min-width: 576px) {
-	.display-sm-2 {
-		font-size: 5.5rem;
-		font-weight: 700;
-		font-weight: 600;
-		line-height: 1.2;
-	}
-}
-
-.blockquote {
-	margin-bottom: 1rem;
-	font-size: 1.25rem;
-}
-
-.blockquote-footer::before {
-	content: '\2014\00A0';
-}
-
-hr {
-	box-sizing: content-box;
-	height: 0;
-	overflow: visible;
-}
-
-abbr[title],
-abbr[data-original-title] {
-	text-decoration: underline;
-	-webkit-text-decoration: underline dotted;
-	text-decoration: underline dotted;
-	cursor: help;
-	border-bottom: 0;
-	-webkit-text-decoration-skip-ink: none;
-	text-decoration-skip-ink: none;
-}
-
 .text-justify {
 	text-align: justify !important;
 }
